[gd_scene load_steps=7 format=3 uid="uid://653q7ksww50"]

[ext_resource type="Script" path="res://objects/trees/Tree0.gd" id="1_35yf0"]
[ext_resource type="Texture2D" uid="uid://de3pvtk6r7utw" path="res://assets/trees/yesil agaac2.png" id="1_fd75r"]
[ext_resource type="Texture2D" uid="uid://ddfhdf2btopao" path="res://assets/trees/turuncu agac1.png" id="3_cnsku"]
[ext_resource type="Texture2D" uid="uid://bde0vw8oaycwx" path="res://assets/trees/yesil agac1.png" id="4_a3f7d"]
[ext_resource type="Texture2D" uid="uid://ba88epxcwoeuu" path="res://assets/trees/turuncu agac2.png" id="5_1pvta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nosnc"]

[node name="Tree0" type="StaticBody2D"]
light_mask = 8
visibility_layer = 8
script = ExtResource("1_35yf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(1.55574, 1.33792)
shape = SubResource("RectangleShape2D_nosnc")

[node name="green2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-12, -28)
texture = ExtResource("1_fd75r")

[node name="orange1" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -32)
texture = ExtResource("3_cnsku")

[node name="green1" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -36)
texture = ExtResource("4_a3f7d")

[node name="orange2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -34)
texture = ExtResource("5_1pvta")
